<resources>
    <string name="app_name">Ripost</string>

    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="button_sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="reset_my_password">Reset my password</string>


    <string name="button_sign_up">Sign Up</string>
    <string name="already_an_account">I have already an account!</string>
    <string name="input_username">Username</string>
    <string name="emoji_hello">👋</string>
    <string name="emoji_inspector">🕵</string>
    <string name="emoji_party">🥳️</string>
    <string name="emoji_self_photo">🤳</string>
    <string name="emoji_art">🖌️</string>
    <string name="input_display_name">Display name</string>
    <string name="skip">skip</string>
    <string name="button_next">Next</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_profile_photo">Profile Photo</string>
    <string name="text_biography">Biography</string>

    <string name="settings_profile_information">PROFILE INFORMATION</string>
    <string name="settings_username">Username</string>
    <string name="settings_display_name">Display name</string>
    <string name="settings_profile_photo">Profile photo</string>
    <string name="settings_biography">Biography</string>
    <string name="settings_personal_information">PERSONAL INFORMATION</string>
    <string name="settings_email">Email</string>
    <string name="settings_password">Password</string>
    <string name="settings_account_visibility">Account visibility</string>
    <string name="settings_birthday">Birthday</string>
    <string name="settings_log_out">Log out</string>

    <string name="item_search_followers">Followers</string>

    <string name="search_users">Users</string>

    <string name="hint_biography">Describe the video creator in your head… (150 words)</string>
    <string name="img_description">img description</string>
    <string name="load_more_results">Load more results</string>

    <string name="button_follow">Follow</string>
    <string name="button_un_follow">UnFollow</string>
    <!-- DATABASE -->
    <string name="dbname_users">Users</string>
    <string name="dbname_posts">Posts</string>
    <string name="dbname_followers">Followers</string>
    <string name="dbname_following">Following</string>
    <string name="dbname_notifications">Notifications</string>
    <string name="dbname_wait_list">WaitList</string>
    <string name="dbname_friends">Friends</string>
    <string name="dbname_groups">Groups</string>
    <string name="dbname_messages">Messages</string>
    <string name="dbname_comments">Comments</string>
    <string name="dbname_likes">Likes</string>
    <string name="field_username">username</string>
    <string name="field_display_name">displayName</string>
    <string name="field_email">email</string>
    <string name="field_birthday">birthday</string>
    <string name="field_private">private</string>
    <string name="field_uid">uid</string>
    <string name="field_date_created">dateCreated</string>
    <string name="field_following">following</string>
    <string name="field_followers">followers</string>
    <string name="field_posts">posts</string>
    <string name="field_certified">certified</string>
    <string name="field_token">token</string>
    <string name="field_biography">biography</string>
    <string name="field_photo_url">photoUrl</string>
    <string name="field_members">members</string>
</resources>