<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/snippet_toolbar"/>

        <!-- Email Field -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:background="@drawable/bg_input_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_in_email"
                android:maxLines="1"
                android:fontFamily="@font/work_sans_regular"
                android:textColorHint="@color/white"
                android:theme="@style/MyFilledBox"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:backgroundTint="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Field -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeWidth="0dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/placeholder"
            app:boxStrokeWidthFocused="0dp"
            android:background="@drawable/bg_input_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_in_password"
                android:maxLines="1"
                android:fontFamily="@font/work_sans_regular"
                android:textColorHint="@color/white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPassword"
                android:textColorHighlight="@color/white"
                android:textColor="@color/white"
                android:id="@+id/password"
                android:textSize="18sp"
                android:backgroundTint="@android:color/transparent"/>


        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/forgot_password"
                android:layout_marginTop="10dp"
                android:id="@+id/forgotPassword"
                android:textColor="@color/placeholder"
                android:fontFamily="@font/work_sans_regular"
                android:textSize="15sp"/>
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_btn_primary"
            android:layout_gravity="center"
            android:text="@string/button_sign_in"
            android:textAllCaps="false"
            android:fontFamily="@font/work_sans_regular"
            android:textSize="18sp"
            android:id="@+id/signIn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_an_account"
            android:textColor="@color/placeholder"
            android:fontFamily="@font/work_sans_medium"
            android:textSize="15sp"
            android:layout_marginTop="60dp"
            android:id="@+id/createAccount"/>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"/>



</RelativeLayout>